# epyllion

./: .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  dev-requirements.txt  docs-requirements.in  docs-requirements.txt  mkdocs.yml  mypy-requirements.in  mypy-requirements.txt  noxfile.py  pyproject.toml  requirements.txt  test-requirements.txt  tox.ini
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  dist.yml  pre-commit.yml  tox.yml  validate.yml
docs/: README.md  conf.py
requirements/: dev.in  dev.txt  docs.in  docs.txt  requirements.in  requirements.txt  test.in  test.txt  types.in  types.txt
src/epyllion/: __init__.py  __main__.py  chunk_cli.py  context.py  lit.py
src/epyllion/_compat/: __init__.py  typing.py
src/epyllion/chunk_commands/: python_chunk.py
tests/: test_package.py
tests/data/: doc01.md
